[gd_scene load_steps=7 format=3 uid="uid://6q2gb6dtgjyc"]

[ext_resource type="Script" path="res://Core/PlayerController/ThirdPerson/PlayerController.gd" id="1_1g7x5"]
[ext_resource type="PackedScene" uid="uid://l0c5743t5n55" path="res://Entity/Context/CapsulePlayer/CapsulePlayerMesh.tscn" id="2_aoiep"]
[ext_resource type="Script" path="res://addons/camera_placements/CameraPlacements.gd" id="3_r61uo"]

[sub_resource type="CylinderMesh" id="CylinderMesh_veaop"]
top_radius = 0.0
bottom_radius = 0.2
height = 0.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t3rjw"]
radius = 0.25
height = 1.65

[sub_resource type="SphereShape3D" id="SphereShape3D_t6c4u"]
radius = 0.1

[node name="Player" type="CharacterBody3D"]
collision_mask = 7
script = ExtResource("1_1g7x5")

[node name="Name" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.91886, 0)
billboard = 1
no_depth_test = true
text = "<name>"

[node name="BaseDirIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1.34374, 0, 0, 0, -4.37114e-08, -0.230035, 0, 1, -1.00552e-08, 0, 0.144161, 0.25433)
visible = false
mesh = SubResource("CylinderMesh_veaop")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.86287, 0)
shape = SubResource("CapsuleShape3D_t3rjw")

[node name="PlayerMesh" type="Node3D" parent="."]

[node name="CapsulePlayer" parent="PlayerMesh" instance=ExtResource("2_aoiep")]
persistent_shell = false

[node name="CapsuleMesh" parent="PlayerMesh/CapsulePlayer" index="0"]
skeleton = NodePath("../../..")

[node name="InhabitableTrigger" parent="PlayerMesh/CapsulePlayer" index="2"]
collision_layer = 0
collision_mask = 0

[node name="Proxy_FPS" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)

[node name="Proxy_Over" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.81784, 0)

[node name="Proxy_Right" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.04945, 1.20752, 0)

[node name="Proxy_Left" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.979953, 1.20752, 0)

[node name="Proxy_Back" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.291, -0.41629)

[node name="CameraRig" type="Node3D" parent="."]

[node name="Target" type="Node3D" parent="CameraRig"]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraRig/Target"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
collision_mask = 16777214
shape = SubResource("SphereShape3D_t6c4u")
spring_length = 3.0

[node name="Camera3D" type="Camera3D" parent="CameraRig/Target/SpringArm3D"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 2.54461)

[node name="CameraPlacements" type="Node3D" parent="."]
script = ExtResource("3_r61uo")
proxy_fps = Vector3(-0.00668955, 1.33249, 0.00596285)
proxy_over = Vector3(0.0143249, 2.05391, 0.0409417)
proxy_right = Vector3(-0.715692, 1.12318, -0.0852035)
proxy_left = Vector3(0.831598, 1.07325, -0.0541289)
proxy_back = Vector3(0.0721449, 1.27959, -0.993644)

[editable path="PlayerMesh/CapsulePlayer"]
